# Startup_Trend_Analysis_RAG

./: README.md  app.py  main.py  pyproject.toml
